notational bugfixes in full posterior

--- a/index.html
+++ b/index.html
@@ -5186,8 +5186,8 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
  <use xlink:href="#MJMATHI-74" x="3582" y="0"></use>
 </g>
-</svg></span>, the full posterior is <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="55.653ex" height="7.343ex" style="vertical-align: -3.005ex;" viewBox="0 -1867.7 23961.4 3161.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-262-Title">
-<title id="MathJax-SVG-262-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α - 1} (1-p)^{β - 1} \prod_{m=1}^M r_m p^{δ_m} + s, </title>
+</svg></span>, the full posterior is <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="57.328ex" height="7.343ex" style="vertical-align: -3.005ex;" viewBox="0 -1867.7 24682.6 3161.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-262-Title">
+<title id="MathJax-SVG-262-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α - 1} (1-p)^{β - 1} \prod_{m=1}^M r_m p^{δ_m} + s_m, </title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-50" x="0" y="0"></use>
  <use xlink:href="#MJMAIN-28" x="751" y="0"></use>
@@ -5257,8 +5257,11 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
 </g>
  <use xlink:href="#MJMAIN-2B" x="22212" y="0"></use>
- <use xlink:href="#MJMATHI-73" x="23213" y="0"></use>
- <use xlink:href="#MJMAIN-2C" x="23682" y="0"></use>
+<g transform="translate(23213,0)">
+ <use xlink:href="#MJMATHI-73" x="0" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="663" y="-213"></use>
+</g>
+ <use xlink:href="#MJMAIN-2C" x="24404" y="0"></use>
 </g>
 </svg></span> and since</p>
 <ul>
@@ -5314,8 +5317,8 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
 </svg></span> (failed quiz),</li>
 </ul>
-<p>this can be rewritten as <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="69.884ex" height="7.343ex" style="vertical-align: -3.005ex;" viewBox="0 -1867.7 30088.6 3161.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-269-Title">
-<title id="MathJax-SVG-269-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α + (\sum_{m=1}^M I(x_m) \delta_m) - 1} (1-p)^{β - 1} \prod_{m=1}^M I'(x_m) p^{δ_m}, </title>
+<p>this can be rewritten as <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="76.379ex" height="7.343ex" style="vertical-align: -3.005ex;" viewBox="0 -1867.7 32885.2 3161.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-269-Title">
+<title id="MathJax-SVG-269-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α + \left( \sum_{m=1}^M I(x_m) \delta_m \right) - 1} (1-p)^{β - 1} \prod_{m=1}^M I'(x_m) (1-p^{δ_m}), </title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-50" x="0" y="0"></use>
  <use xlink:href="#MJMAIN-28" x="751" y="0"></use>
@@ -5346,11 +5349,12 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
  <use xlink:href="#MJMAIN-221D" x="10038" y="0"></use>
 <g transform="translate(11094,0)">
  <use xlink:href="#MJMATHI-70" x="0" y="0"></use>
-<g transform="translate(503,412)">
+<g transform="translate(503,567)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B1" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-2B" x="640" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-28" x="1419" y="0"></use>
-<g transform="translate(1278,0)">
+<g transform="translate(1003,0)">
+ <use transform="scale(0.707)" xlink:href="#MJSZ2-28"></use>
+<g transform="translate(422,0)">
  <use transform="scale(0.707)" xlink:href="#MJSZ1-2211" x="0" y="-1"></use>
  <use transform="scale(0.574)" xlink:href="#MJMATHI-4D" x="1301" y="538"></use>
 <g transform="translate(747,-207)">
@@ -5359,27 +5363,28 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
  <use transform="scale(0.574)" xlink:href="#MJMAIN-31" x="1657" y="0"></use>
 </g>
 </g>
- <use transform="scale(0.707)" xlink:href="#MJMATHI-49" x="4952" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-28" x="5456" y="0"></use>
-<g transform="translate(4133,0)">
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-49" x="3741" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-28" x="4245" y="0"></use>
+<g transform="translate(3277,0)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-78" x="0" y="0"></use>
  <use transform="scale(0.574)" xlink:href="#MJMATHI-6D" x="705" y="-185"></use>
 </g>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="7232" y="0"></use>
-<g transform="translate(5389,0)">
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="6021" y="0"></use>
+<g transform="translate(4532,0)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="0" y="0"></use>
  <use transform="scale(0.574)" xlink:href="#MJMATHI-6D" x="547" y="-185"></use>
 </g>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="8879" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-2212" x="9268" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-31" x="10047" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJSZ2-29" x="7668" y="-1"></use>
+</g>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-2212" x="9684" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-31" x="10463" y="0"></use>
 </g>
 </g>
- <use xlink:href="#MJMAIN-28" x="19156" y="0"></use>
- <use xlink:href="#MJMAIN-31" x="19545" y="0"></use>
- <use xlink:href="#MJMAIN-2212" x="20268" y="0"></use>
- <use xlink:href="#MJMATHI-70" x="21269" y="0"></use>
-<g transform="translate(21772,0)">
+ <use xlink:href="#MJMAIN-28" x="19450" y="0"></use>
+ <use xlink:href="#MJMAIN-31" x="19839" y="0"></use>
+ <use xlink:href="#MJMAIN-2212" x="20562" y="0"></use>
+ <use xlink:href="#MJMATHI-70" x="21563" y="0"></use>
+<g transform="translate(22066,0)">
  <use xlink:href="#MJMAIN-29" x="0" y="0"></use>
 <g transform="translate(389,412)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B2" x="0" y="0"></use>
@@ -5387,7 +5392,7 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-31" x="1345" y="0"></use>
 </g>
 </g>
-<g transform="translate(23733,0)">
+<g transform="translate(24027,0)">
  <use xlink:href="#MJSZ2-220F" x="123" y="0"></use>
 <g transform="translate(0,-1090)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="0" y="0"></use>
@@ -5396,24 +5401,28 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-4D" x="552" y="1627"></use>
 </g>
-<g transform="translate(25426,0)">
+<g transform="translate(25720,0)">
  <use xlink:href="#MJMATHI-49" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-2032" x="740" y="583"></use>
 </g>
- <use xlink:href="#MJMAIN-28" x="26244" y="0"></use>
-<g transform="translate(26634,0)">
+ <use xlink:href="#MJMAIN-28" x="26538" y="0"></use>
+<g transform="translate(26928,0)">
  <use xlink:href="#MJMATHI-78" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="809" y="-213"></use>
 </g>
- <use xlink:href="#MJMAIN-29" x="27927" y="0"></use>
-<g transform="translate(28317,0)">
+ <use xlink:href="#MJMAIN-29" x="28221" y="0"></use>
+ <use xlink:href="#MJMAIN-28" x="28611" y="0"></use>
+ <use xlink:href="#MJMAIN-31" x="29000" y="0"></use>
+ <use xlink:href="#MJMAIN-2212" x="29723" y="0"></use>
+<g transform="translate(30724,0)">
  <use xlink:href="#MJMATHI-70" x="0" y="0"></use>
 <g transform="translate(503,412)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="0" y="0"></use>
  <use transform="scale(0.574)" xlink:href="#MJMATHI-6D" x="547" y="-185"></use>
 </g>
 </g>
- <use xlink:href="#MJMAIN-2C" x="29810" y="0"></use>
+ <use xlink:href="#MJMAIN-29" x="32217" y="0"></use>
+ <use xlink:href="#MJMAIN-2C" x="32606" y="0"></use>
 </g>
 </svg></span> where <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="4.311ex" height="2.843ex" style="vertical-align: -0.838ex;" viewBox="0 -863.1 1856 1223.9" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-270-Title">
 <title id="MathJax-SVG-270-Title">I(x)</title>
@@ -5477,8 +5486,8 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-3B4" x="0" y="0"></use>
 </g>
-</svg></span>. Thus, <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="48.202ex" height="3.176ex" style="vertical-align: -0.838ex;" viewBox="0 -1006.6 20753.7 1367.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-276-Title">
-<title id="MathJax-SVG-276-Title"> P(p; p_t | k_1, n_1) ∝ p^{α + k \delta - 1} (1-p)^{β - 1} (1 - p^{δ_m})^{n-k}, </title>
+</svg></span>. Thus, <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="46.867ex" height="3.176ex" style="vertical-align: -0.838ex;" viewBox="0 -1006.6 20178.6 1367.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-276-Title">
+<title id="MathJax-SVG-276-Title"> P(p; p_t | k_1, n_1) ∝ p^{α + k \delta - 1} (1-p)^{β - 1} (1 - p^{δ})^{n-k}, </title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-50" x="0" y="0"></use>
  <use xlink:href="#MJMAIN-28" x="751" y="0"></use>
@@ -5528,12 +5537,9 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
  <use xlink:href="#MJMAIN-2212" x="16148" y="0"></use>
 <g transform="translate(17148,0)">
  <use xlink:href="#MJMATHI-70" x="0" y="0"></use>
-<g transform="translate(503,412)">
- <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="0" y="0"></use>
- <use transform="scale(0.574)" xlink:href="#MJMATHI-6D" x="547" y="-185"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="712" y="583"></use>
 </g>
-</g>
-<g transform="translate(18641,0)">
+<g transform="translate(18066,0)">
  <use xlink:href="#MJMAIN-29" x="0" y="0"></use>
 <g transform="translate(389,412)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6E" x="0" y="0"></use>
@@ -5541,7 +5547,7 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6B" x="1379" y="0"></use>
 </g>
 </g>
- <use xlink:href="#MJMAIN-2C" x="20475" y="0"></use>
+ <use xlink:href="#MJMAIN-2C" x="19900" y="0"></use>
 </g>
 </svg></span> which is what we saw above.</p>
 <p>But this is also useful because now we know that that for true quizzes, we could have exact (no approximation needed) posteriors by fixing <span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="6.377ex" height="2.343ex" style="vertical-align: -0.338ex;" viewBox="0 -863.1 2745.6 1008.6" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-277-Title">
